--- a/progonka/progonka.ipynb
+++ b/progonka/progonka.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 441,
    "id": "f93a4a8c",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 442,
    "id": "8e745fa2",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 443,
    "id": "825b1ba4",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 444,
    "id": "cab72190",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 445,
    "id": "acc5c5de",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 446,
    "id": "680e1da2",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 447,
    "id": "cc6cc96d",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 448,
    "id": "a2884266",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 449,
    "id": "c705f3e1",
    "metadata": {},
    "outputs": [
@@ -307,12 +307,13 @@
     "plt.legend(fontsize=8.)\n",
     "plt.title(f'Краевая задача шаг h = {h}')\n",
     "plt.grid()\n",
+    "plt.savefig(\"function.jpg\", dpi = 300)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 450,
    "id": "baf37604",
    "metadata": {},
    "outputs": [],
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 451,
    "id": "f9f66764",
    "metadata": {},
    "outputs": [
@@ -363,12 +364,13 @@
     "plt.legend(fontsize=8.)\n",
     "plt.title(f'Ошибка(логарифмический масштаб)')\n",
     "plt.grid()\n",
+    "plt.savefig(\"errors.jpg\", dpi = 300)\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 452,
    "id": "aafed39c",
    "metadata": {},
    "outputs": [
